--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <button type="button" onclick="
     var hypoTest = prompt('What hypothesis would you like to test?') 
     if (hypoTest == 'hypothesis one') { 
-        alert ('You are testing the pressure hypothesis, or Hypothesis 1...Loading...connecting to Z10...Go to ___ to view the results!')
+        alert ('Testing for Hypothesis 1 has been iniatiated. There is currently not enough data to support a valid conclusion. Please check back soon for the results!')
         }">Test Hypothesis!</button>
 </body>
 </html>
